--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,4 +35,4 @@ jobs:
           prerelease: true
           title: "Development Build"
           files: |
-            build/*.jar
+            build/*.zip
