--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,13 +24,10 @@ jobs:
       - name: Build
         run: |
           export LANG=C.UTF-8
-          runghc ./Main.hs -j everything
+          runghc ./Main.hs -j build
 
-      - uses: "marvinpinto/action-automatic-releases@latest"
+      - uses: "softprops/action-gh-release@v2"
         with:
-          repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          automatic_release_tag: "latest"
           prerelease: true
-          title: "Development Build"
           files: |
             build/*.zip
