--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,8 +26,9 @@ jobs:
           export LANG=C.UTF-8
           runghc ./Main.hs -j build
 
-      - uses: "softprops/action-gh-release@v2"
+      - name: Release
+        uses: "softprops/action-gh-release@v2"
+        if: startsWith(github.ref, 'refs/tags/')
         with:
-          prerelease: true
           files: |
             build/*.zip
